[project]
name = "photos-creation-date-overwrite"
version = "0.1.0"
description = ""
authors = [
    {name = "FilippoPisello",email = "filippo.pisello@live.it"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "piexif (>=1.1.3,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
